Folha de estilo e tentativa de ícone.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icone_do_head" href="C:\Users\pietr\Pictures\Fatec PF\Disciplinas\Integrador I\Ícone\icone_png_logo_aires_psicologo.PNG" type="image/png"> <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
     <title>Página de Aires Ramon dos Reis</title>
 
 
