--- a/index2_gio.html
+++ b/index2_gio.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
+    <link rel="stylesheet" href="index.css">
+
+    <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
+    <link rel="icone_do_head" href="C:\Users\pietr\Pictures\Fatec PF\Disciplinas\Integrador I\Ícone\icone_png_logo_aires_psicologo.PNG" type="image/png"> 
     <title>Página de Aires Ramon dos Reis</title>
 
 
+
+
+
+
 </head>
+
 
 <body>
     <header>
@@ -20,7 +28,7 @@
     </header>
 
     <main>
-
+        <h1> TESTE </h1>
     </main>
 
     <footer>
