alterações na nav bar. Giovani

--- a/Edição atual/index2_gio.html
+++ b/Edição atual/index2_gio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style2_gio.css">
 
     <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
     <link rel="icone_do_head" href="C:\Users\pietr\Pictures\Fatec PF\Disciplinas\Integrador I\Ícone\icone_png_logo_aires_psicologo.PNG" type="image/png"> 
@@ -30,6 +30,7 @@
     <main>
         <h1> TESTE </h1>
     </main>
+
 
     <footer>
         <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
