icon adicionado. Giovani

--- a/Edição atual/index2_gio.html
+++ b/Edição atual/index2_gio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style2_gio.css">
 
     <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
-    <link rel="icone_do_head" href="C:\Users\pietr\Pictures\Fatec PF\Disciplinas\Integrador I\Ícone\icone_png_logo_aires_psicologo.PNG" type="image/png"> 
+    <link rel="shortcut icon" href="aire-simbulus.ico" type="image/x-icon"> 
     <title>Página de Aires Ramon dos Reis</title>
 
 
