separação para teste

--- a/index.html
+++ b/index.html
@@ -3,24 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="aire-simbulus.ico" type="image/x-icon"> 
     <title>Página de Aires Ramon dos Reis</title>
+
+
+
 
 
 </head>
 
+
 <body>
     <header>
         <nav>
-            <a href="#">#</a>
-            <a href="#">sobre mim</a>
-            <a href="#">contato</a>
-            <a href="#">meu trabalho</a>
+            <a href="início">iníco</a>
+            <a href="início">sobre mim</a>
+            <a href="início">contato</a>
+            <a href="início">meu trabalho</a>
+            <a href="início">dúvidas frequentes</a>
         </nav>
     </header>
-
+    <img class="logo_aires_psicologo" src="logo_aires_psicologo.jpg" alt="Logotipo do consultório">
     <main>
-
+        <h1 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h1>
+        <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infanti, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
+        <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
+        <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
     </main>
 
     <footer>
