Adicionadas as páginas da nav. Giovani

--- a/Edição atual/index_gio.html
+++ b/Edição atual/index_gio.html
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style2_gio.css">
-
-    <!--Não consigui colocar o ícone no head com este comando, preciso tentar outras formas. Pietro-->
     <link rel="shortcut icon" href="aire-simbulus.ico" type="image/x-icon"> 
+
     <title>Página de Aires Ramon dos Reis</title>
-
-
-
-
-
-
 </head>
 
 
 <body>
     <header>
         <nav>
-            <a href="#">#</a>
-            <a href="#">sobre mim</a>
-            <a href="#">contato</a>
-            <a href="#">meu trabalho</a>
+            <a rel="home" href="index_gio.html">Início</a>
+            <a rel="redirect" href="index2_sobrenos.html">sobre mim</a>
+            <a rel="redirect_contact" href="index3_contato.html">contato</a>
+            <a rel="redirect_meutrabalho" href="index4_meutrabalho.html">meu trabalho</a>
         </nav>
     </header>
 
