--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 
-    <link rel="shortcut icon" href="aire-simbulus.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
     <title>Página de Aires Ramon dos Reis</title>
 
 
@@ -17,24 +17,31 @@
 
 <body>
     <header>
-        <nav>
-            <a href="início">iníco</a>
-            <a href="início">sobre mim</a>
-            <a href="início">contato</a>
-            <a href="início">meu trabalho</a>
-            <a href="início">dúvidas frequentes</a>
+        <nav class="navbar">
+            <a href="#teste1">início</a>
+            <a href="#teste2">sobre mim</a>
+            <a href="#teste3">contato</a>
+            <a href="#">meu trabalho</a>
+            <a href="#">dúvidas frequentes</a>
         </nav>
+        <div class="banner-container">
+            <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
+        </div>
     </header>
-    <img class="logo_aires_psicologo" src="logo_aires_psicologo.jpg" alt="Logotipo do consultório">
+    
     <main>
-        <h1 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h1>
-        <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infanti, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
-        <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
-        <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
+        <div class="content">
+            <h1 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h1>
+            <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infanti, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
+            <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
+            <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
+        </div>
     </main>
 
     <footer>
-        <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
+        <nav class="footerbar">
+            <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
+        </nav>
     </footer>
 </body>
 
