correção dos links da navbar

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,9 +18,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#teste1">início</a>
-            <a href="#teste2">sobre mim</a>
-            <a href="#teste3">contato</a>
+            <a href="#">início</a>
+            <a href="#">sobre mim</a>
+            <a href="#">contato</a>
             <a href="#">meu trabalho</a>
             <a href="#">dúvidas frequentes</a>
         </nav>
