--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,7 +33,7 @@
     <main>
         <div class="content">
             <h1 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h1>
-            <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infanti, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
+            <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantilgit, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
             <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
             <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
         </div>
