Utilização de CSS Grid para estruturação das páginas

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,20 +12,20 @@
 
 
 <body>
-    <header>
-        <nav class="navbar">
-            <a href="#">início</a>
-            <a href="#">sobre mim</a>
-            <a href="#">contato</a>
-            <a href="#">meu trabalho</a>
-            <a href="#">dúvidas frequentes</a>
-        </nav>
+    <nav class="navbar">
+        <a href="#">início</a>
+        <a href="#">sobre mim</a>
+        <a href="#">contato</a>
+        <a href="#">meu trabalho</a>
+        <a href="#">dúvidas frequentes</a>
+    </nav>
+    <header class="cabecalho">
         <div class="banner-container">
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
     </header>
     
-    <main>
+    <main class="principal">
         <section class="main-content">
             <h1>Aires Ramon dos Reis</h1>
             <h2 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h2>
@@ -35,10 +35,18 @@
         </section>
         <section class="faq">
             <h2>Perguntas mais frequentes</h2>
+            <div class="pergunta">
+                <h3>Hórarios Disponiveis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsam similique ratione veritatis numquam in, nobis non perferendis architecto aliquid culpa, cumque labore eos voluptate neque iusto mollitia dicta? Ratione?</p>
+            </div>
+            <div class="pergunta">
+                <h3>Convênio</h3>
+                <p>Sou convêniado pelo Dona Balbina</p>
+            </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="rodape">
         <nav class="footerbar">
             <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
         </nav>
