adicionados links internos para outras páginas html na nav. Giovani

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,11 +14,11 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#">início</a>
-            <a href="#">sobre mim</a>
-            <a href="#">contato</a>
-            <a href="#">meu trabalho</a>
-            <a href="#">dúvidas frequentes</a>
+            <a alt="home" href="index.html">início</a>
+            <a alt="sobremim" href="sobremim.html">sobre mim</a>
+            <a alt="contato" href="contato.html">contato</a>
+            <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
+            <a alt="FAQ" href="duvidas.html">dúvidas frequentes</a>
         </nav>
         <div class="banner-container">
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
@@ -28,7 +28,7 @@
     <main>
         <div class="content">
             <h1 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h1>
-            <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantilgit, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
+            <h2 class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </h2>
             <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
             <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
         </div>
