adicionados comentários e atualização de classes. Giovani

--- a/src/pages/sobremim.html
+++ b/src/pages/sobremim.html
@@ -12,14 +12,14 @@
 
 
 <body>
-    <header>
+    <header class="cabecalho">
         <nav class="navbar">
             <a alt="home" href="index.html">início</a>
             <a alt="sobremim" href="sobremim.html">sobre mim</a>
             <a alt="contato" href="contato.html">contato</a>
             <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
-            <a alt="FAQ" href="duvidas.html">dúvidas frequentes</a>
         </nav>
+
         <div class="banner-container">
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
@@ -32,7 +32,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="rodape">
         <nav class="footerbar">
             <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
         </nav>
