--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -12,21 +12,21 @@
 
 
 <body>
-    <header>
+    <header class="cabecalho">
         <nav class="navbar">
             <a alt="home" href="index.html">início</a>
             <a alt="sobremim" href="sobremim.html">sobre mim</a>
             <a alt="contato" href="contato.html">contato</a>
             <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
-            <a alt="FAQ" href="duvidas.html">dúvidas frequentes</a>
         </nav>
+
         <div class="banner-container">
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
     </header>
     
-    <main>
-        <div class="content">
+    <main class="principal">
+        <div class="main-content">
             <h1 class="título_main"> Meios de Contato: </h1>
             <p class="breve_descrição_main">(whatsapp aqui) </p>
             <p class="breve_descrição_main"> Instagram profissional: @psi_airesreis</p>
@@ -34,7 +34,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="rodape">
         <nav class="footerbar">
             <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
         </nav>
