atualização do css

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,54 +1,42 @@
-<!--Tipo de Documento e Linguagem-->
-
 <!DOCTYPE html>
 <html lang="en">
 
-<!--Abertura da head-->
 <head>
-<!--Metadados (caracteres especiais e adaptação para outros dispositivos)-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--Ícone da página e Css aplicado-->
     <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
 
-<!--Título do página-->
+    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
     <title>PsicoAires</title>
 </head>
 
-<!--Abertura do Body-->
+
 <body>
-
-<!--Abertura do Header e Navbar no topo da página-->
     <header class="cabecalho">
-
-<!--Navbar com links internos a outras páginas html-->
         <nav class="navbar">
-            <a alt="home" href="index.html">início</a>
-            <a alt="sobremim" href="sobremim.html">sobre mim</a>
-            <a alt="contato" href="contato.html">contato</a>
-            <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
+            <a href="index.html">início</a>
+            <a href="sobre_Mim.html">sobre mim</a>
+            <a href="contato.html">contato</a>
+            <a href="meu_Trabalho.html">meu trabalho</a>
+            <a href="#faq">dúvidas frequentes</a>
         </nav>
-
-<!--DIV para a imagem da Header-->
         <div class="banner-container">
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
     </header>
-
-<!--Abertura do Main-->
+    
     <main class="principal">
-
-<!--Sessão para a parte escrita do main-->
         <section class="main-content">
-            <h1>Aires Ramon dos Reis</h1>
-            <h2 class="título_main"> Seja muito bem-vindo ao site de meu consultório! </h2>
-            <p class="subtítulo_main"> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantilgit, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </p>
-            <p class="breve_descrição_main"> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
-            <p class="breve_descrição_main"> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
-        </section>
+            <div class="image-placeholder">
 
-<!--Sessão FAQ do Main-->
+            </div>
+            <aside class="main-text">
+                <h1>Aires Ramon dos Reis</h1>
+                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantilgit, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </p>
+                <p> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
+                <p> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
+            </aside>
+        </section>
         <section class="faq">
             <h2>Perguntas mais frequentes</h2>
             <div class="pergunta">
@@ -62,7 +50,6 @@
         </section>
     </main>
 
-<!--footer e conteúdo-->
     <footer class="rodape">
         <nav class="footerbar">
             <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
