--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -14,10 +14,11 @@
 <body>
     <header class="cabecalho">
         <nav class="navbar">
-            <a alt="home" href="index.html">início</a>
-            <a alt="sobremim" href="sobremim.html">sobre mim</a>
-            <a alt="contato" href="contato.html">contato</a>
-            <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
+            <a href="index.html">início</a>
+            <a href="sobre_Mim.html">sobre mim</a>
+            <a href="contato.html">contato</a>
+            <a href="meu_Trabalho.html">meu trabalho</a>
+            <a href="#faq">dúvidas frequentes</a>
         </nav>
 
         <div class="banner-container">
