--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,7 +32,7 @@
             </div>
             <aside class="main-text">
                 <h1>Aires Ramon dos Reis</h1>
-                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantilgit, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </p>
+                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </p>
                 <p> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
                 <p> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
             </aside>
