--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,8 +40,15 @@
         <section class="faq">
             <h2>Perguntas mais frequentes</h2>
             <div class="pergunta">
+                <h3>Agendamento</h3>
+                <p>Realizo agendamento somente vía Whatsapp e Instagram</p>
+                <p>Página de Contato</p>
+            </div>
+            <div class="pergunta">
                 <h3>Hórarios Disponiveis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsam similique ratione veritatis numquam in, nobis non perferendis architecto aliquid culpa, cumque labore eos voluptate neque iusto mollitia dicta? Ratione?</p>
+                <p>Segunda-feira à Quinta-feira -> 07:00 às 20:00</p>
+                <p>Sexta-Feira -> 07:00 às 12:00</p>
+                <p>Não atendemos de Sexta-Feira e nem fim de semana.</p>
             </div>
             <div class="pergunta">
                 <h3>Convênio</h3>
