correção na semântica

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,15 +24,15 @@
 
 <!--Navbar com links internos a outras páginas html-->
         <nav class="navbar">
-            <a alt="home" href="index.html">início</a>
-            <a alt="sobremim" href="sobremim.html">sobre mim</a>
-            <a alt="contato" href="contato.html">contato</a>
-            <a alt="curriculo" href="meutrabalho.html">meu trabalho</a>
+            <a href="index.html">início</a>
+            <a href="sobremim.html">sobre mim</a>
+            <a href="contato.html">contato</a>
+            <a href="meutrabalho.html">meu trabalho</a>
         </nav>
 
 <!--DIV para a imagem da Header-->
         <div class="banner-container">
-            <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
+            <img alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
     </header>
 
