Correção gramatical e adição do Whatsapp - Pietro

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -28,7 +28,7 @@
     <main class="principal">
         <div class="main-content">
             <h1 class="título_main"> Meios de Contato: </h1>
-            <p class="breve_descrição_main">(whatsapp aqui) </p>
+            <p class="breve_descrição_main">Whatsapp: (19) 99851-8780 </p>
             <p class="breve_descrição_main"> Instagram profissional: @psi_airesreis</p>
             <p class="breve_descrição_main"> E-mail: psico.airesreis@gmail.com</p>
         </div>
