--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,11 +48,11 @@
                 <h3>Hórarios Disponiveis</h3>
                 <p>Segunda-feira à Quinta-feira -> 07:00 às 20:00</p>
                 <p>Sexta-Feira -> 07:00 às 12:00</p>
-                <p>Não atendemos de Sexta-Feira e nem fim de semana.</p>
+                <p>Não atendemos de Sexta-Feira à tarde e nem finais de semana.</p>
             </div>
             <div class="pergunta">
                 <h3>Convênio</h3>
-                <p>Sou convêniado pelo Dona Balbina</p>
+                <p>Sou convêniado pelo Dona Balbina Clinicas</p>
             </div>
         </section>
     </main>
