--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -29,7 +29,7 @@
     <main>
         <div class="content">
             <h1 class="título_main"> Sobre Mim: </h1>
-            <p class="breve_descrição_main">Me chamo Aires Ramon dos Reis, sou formado em Psicologia pelo Centro Universitário Central Paulista UNICEP (2018) e possuo pós-graduado em Psicologia Infantil pela Faculdade Futura (2020). Atualmente, estou cursando uma pós-graduação em Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico pela Faculdade Alcance FAAL, com conclusão prevista para fevereiro de 2026. Sempre busco fazer o possível para ajudar meus clientes com o que quer que precisem.</p>
+            <p class="breve_descrição_main">\Chamo-me Aires Ramon dos Reis, sou formado em Psicologia pelo Centro Universitário Central Paulista UNICEP (2018) e possuo pós-graduado em Psicologia Infantil pela Faculdade Futura (2020). Atualmente, estou cursando uma pós-graduação em Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico pela Faculdade Alcance FAAL, com conclusão prevista para fevereiro de 2026. Sempre busco fazer o possível para ajudar meus clientes com o que quer que precisem.</p>
         </div>
     </main>
 
