Reestruturação do faq para o metodo de cards, organizada no css

--- a/src/pages/meu_Trabalho.html
+++ b/src/pages/meu_Trabalho.html
@@ -28,10 +28,20 @@
     
     <main>
         <div class="content">
-            <h1 class="título_main"> Sobre Meu Trabalho: </h1>
-            <h2 class="subtítulo_main">Como Trabalho?</h2>
-            <p class="breve_descrição_main">Antes da consulta, iremos começar com uma entrevista para poder compreender o motivo da pessoa estar me procurando, histórico pessoal e familiar, principais sintomas notados ou dificuldades relatadas. Após a entrevista, consigo determinar o método mais adequado para avaliar o caso, podendo incluir testes psicológicos validados, escalas, observação comportamental, e caso necessário, entrevistas complementares com familiares ou responsáveis.</p>
-            <p class="breve_descrição_main">Com os dados obtidos através dos métodos, elaboro uma hipótese diagnóstica e faço a utilização de um plano de intervenção individualizado. Na etapa de planejamento do tratamento, levo em conta os objetivos do cliente, contexto na qual ele está inserido e as abordagens teóricas que norteiam meu trabalho. Esse plano de intervenção será periodicamente ajustado conforme a evolução do paciente e das futuras sessões.</p>
+            <h2> Sobre Meu Trabalho: </h2>
+            <div class="pergunta">
+                <h3>Antes da Consulta</h3>
+                <p>Iremos começar com uma entrevista para poder compreender o motivo da pessoa estar me procurando, histórico pessoal e familiar, principais sintomas notados ou dificuldades relatadas.</p>
+            </div>
+            <div class="pergunta">
+                <h3>Após a Entrevista</h3>
+                <p>Com os dados da entrevista, consigo determinar o método mais adequado para avaliar o caso, podendo incluir testes psicológicos validados, escalas, observação comportamental, e caso necessário, entrevistas complementares com familiares ou responsáveis.</p>
+            </div>
+            <p>Com os dados obtidos através dos métodos, elaboro uma hipótese diagnóstica e faço a utilização de um plano de intervenção individualizado. Na etapa de planejamento do tratamento, levo em conta os objetivos do cliente, contexto na qual ele está inserido e as abordagens teóricas que norteiam meu trabalho. Esse plano de intervenção será periodicamente ajustado conforme a evolução do paciente e das futuras sessões.</p>
+            <div class="pergunta">
+                <h3>Após a Entrevista</h3>
+                <p>Com os dados da entrevista, consigo determinar o método mais adequado para avaliar o caso, podendo incluir testes psicológicos validados, escalas, observação comportamental, e caso necessário, entrevistas complementares com familiares ou responsáveis.</p>
+            </div>
         </div>
     </main>
 
