--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/main.css">
 
-    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon">
     <title>PsicoAires</title>
 </head>
 
@@ -24,35 +24,68 @@
             <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
         </div>
     </header>
-    
+
     <main class="principal">
-        <section class="main-content">
+        <section class="introducao">
             <div class="image-placeholder">
 
             </div>
             <aside class="main-text">
                 <h1>Aires Ramon dos Reis</h1>
-                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde mental. </p>
-                <p> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação e posterior tratamento terapêutico.</p>
-                <p> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM" para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica profissional.</p>
+                <h2>Psicologo Clinico</h2>
+                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e
+                    Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde
+                    mental. </p>
+                <p> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação
+                    e posterior tratamento terapêutico.</p>
+                <p> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria
+                    consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM"
+                    para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será
+                    desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS
+                    FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica
+                    profissional.</p>
             </aside>
         </section>
-        <section class="faq">
+
+        <section class="card-sec">
+            <h2>Formas de Atendimento</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3 class="card-titulo">Atendimento Presencial</h3>
+                    <div class="card-texto">
+                        <p>Realizo somente atendimentos presenciais. Não realizo sessões online, por telefone ou qualquer outra
+                            modalidade remota.</p>
+                    </div>
+                    <button>Agendar Consulta</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="card-sec">
             <h2>Perguntas mais frequentes</h2>
-            <div class="pergunta">
-                <h3>Agendamento</h3>
-                <p>Realizo agendamento somente vía Whatsapp e Instagram</p>
-                <p>Página de Contato</p>
-            </div>
-            <div class="pergunta">
-                <h3>Hórarios Disponiveis</h3>
-                <p>Segunda-feira à Quinta-feira -> 07:00 às 20:00</p>
-                <p>Sexta-Feira -> 07:00 às 12:00</p>
-                <p>Não atendemos de Sexta-Feira e nem fim de semana.</p>
-            </div>
-            <div class="pergunta">
-                <h3>Convênio</h3>
-                <p>Sou convêniado pelo Dona Balbina</p>
+            <div class="card-container">
+                <div class="card">
+                    <h3 class="card-titulo">Agendamento</h3>
+                    <div class="card-texto">
+                        <p>Agendamentos somente através de Whatsapp e Instagram</p>
+                        <p>Página de Contato</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-titulo">Hórarios</h3>
+                    <div class="card-texto">
+                        <p>Segunda-feira à Quinta-feira 07:00 às 20:00</p>
+                        <p>Sexta-Feira 07:00 às 12:00</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-titulo">Convênio</h3>
+                    <div class="card-texto">
+                        <p>Sou convêniado pelo Dona Balbina</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
