Estilização dos cards + hover

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -63,7 +63,6 @@
 
         <section class="card-sec">
             <h2>Perguntas mais frequentes</h2>
-<<<<<<< HEAD
             <div class="card-container">
                 <div class="card">
                     <h3 class="card-titulo">Agendamento</h3>
@@ -84,25 +83,9 @@
                 <div class="card">
                     <h3 class="card-titulo">Convênio</h3>
                     <div class="card-texto">
-                        <p>Sou convêniado pelo Dona Balbina</p>
+                        <p>Atualmente participo do plano de convênio do Hospital Dona Balbina de Porto Ferreira</p>
                     </div>
                 </div>
-=======
-            <div class="pergunta">
-                <h3>Agendamento</h3>
-                <p>Realizo agendamento somente vía Whatsapp e Instagram</p>
-                <p>Página de Contato</p>
-            </div>
-            <div class="pergunta">
-                <h3>Hórarios Disponiveis</h3>
-                <p>Segunda-feira à Quinta-feira -> 07:00 às 20:00</p>
-                <p>Sexta-Feira -> 07:00 às 12:00</p>
-                <p>Não atendemos de Sexta-Feira à tarde e nem finais de semana.</p>
-            </div>
-            <div class="pergunta">
-                <h3>Convênio</h3>
-                <p>Sou convêniado pelo Dona Balbina Clinicas</p>
->>>>>>> 250df21db9dd597556befb879d46504342381e64
             </div>
         </section>
     </main>
