estilização do site e estruturação das outras paginas

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,20 +30,38 @@
             <div class="image-placeholder">
 
             </div>
-            <aside class="main-text">
-                <h1>Aires Ramon dos Reis</h1>
-                <h2>Psicologo Clinico</h2>
-                <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e
-                    Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde
-                    mental. </p>
-                <p> Olá! Estou muito feliz em tê-lo aqui! Saiba que está em excelentes mãos para sua priemeira avaliação
-                    e posterior tratamento terapêutico.</p>
-                <p> Eu sei que você pode estar com muitas dúvidas agora e até mesmo receoso se realmente deveria
-                    consular-se com um psicólogo. Mas não entre em pânico, daqui você pode ir para a sessão "SOBRE MIM"
-                    para me conhecer melhor, "MEU TRABALHO" para receber informações mais detalhadas sobre como será
-                    desde sua primeira consulta até como serão elaborados sua terapia e tratamentos e "DÚVIDAS
-                    FREQUENTES" para vizualizar as perguntas mais comuns de todos que buscam por ajuda psicológica
-                    profissional.</p>
+            <aside class="introducao-container">
+                <div class="introducao-titulos">
+                    <h1>Aires Ramon dos Reis</h1>
+                    <h2>Psicologo Clinico</h2>
+                    <h3>Não é sobre "estar quebrado". É sobre querer "se sentir inteiro".</h3>
+                </div>
+                <div class="introducao-texto">
+                    <p>Você já sentiu como se estivesse carregando um peso que ninguém mais vê?</p>
+
+                    <p>Vivemos em um mundo que aplaude quem "dá conta de tudo" sozinho. Aprendemos a ser fortes, a
+                        engolir o choro e a continuar caminhando, mesmo quando o caminho está difícil. Até que, um dia,
+                        percebemos que estamos exaustos, ansiosos, ou simplesmente... distantes de quem costumávamos
+                        ser.</p>
+
+                    <p>Pedir ajuda é, talvez, o maior mito que precisamos quebrar.</p>
+
+                    <p>Não é um atestado de fracasso. É o exato oposto. É um ato de imensa clareza e de profundo
+                        amor-próprio. É o momento em que você decide parar de tratar sua saúde mental com menos urgência
+                        do que sua saúde física.</p>
+
+                    <p>Buscar ajuda psicológica é como o capitão de um navio que, em meio a uma tempestade, decide
+                        consultar seus mapas e sua bussola em vez de tentar controlar as ondas sozinho. É um espaço sem
+                        julgamento, criado para que você possa, talvez pela primeira vez, colocar "o peso na mesa",
+                        olhar para ele e entender, peça por peça, do que ele é feito.</p>
+                    <p>Não é sobre "apagar" o que dói. É sobre aprender a carregar sua história de uma forma que não
+                        impeça você de caminhar.</p>
+
+                    <p>Você não precisa esperar o copo transbordar. Você não precisa ter todas as respostas, nem precisa
+                        fazer isso sozinho. Buscar ajuda é simplesmente o início de um movimento consciente em direção a
+                        si mesmo. É o maior ato de coragem que existe.</p>
+                </div>
+                <button>Agendar Consulta</button>
             </aside>
         </section>
 
@@ -53,7 +71,8 @@
                 <div class="card">
                     <h3 class="card-titulo">Atendimento Presencial</h3>
                     <div class="card-texto">
-                        <p>Realizo somente atendimentos presenciais. Não realizo sessões online, por telefone ou qualquer outra
+                        <p>Realizo somente atendimentos presenciais. Não realizo sessões online, por telefone ou
+                            qualquer outra
                             modalidade remota.</p>
                     </div>
                     <button>Agendar Consulta</button>
@@ -61,9 +80,8 @@
             </div>
         </section>
 
-        <section class="card-sec">
+        <section class="card-sec" id="faq">
             <h2>Perguntas mais frequentes</h2>
-<<<<<<< HEAD
             <div class="card-container">
                 <div class="card">
                     <h3 class="card-titulo">Agendamento</h3>
@@ -87,22 +105,6 @@
                         <p>Atualmente participo do plano de convênio do Hospital Dona Balbina de Porto Ferreira</p>
                     </div>
                 </div>
-=======
-            <div class="pergunta">
-                <h3>Agendamento</h3>
-                <p>Realizo agendamento somente vía Whatsapp e Instagram</p>
-                <p>Página de Contato</p>
-            </div>
-            <div class="pergunta">
-                <h3>Hórarios Disponiveis</h3>
-                <p>Segunda-feira à Quinta-feira -> 07:00 às 20:00</p>
-                <p>Sexta-Feira -> 07:00 às 12:00</p>
-                <p>Não atendemos de Sexta-Feira à tarde e nem finais de semana.</p>
-            </div>
-            <div class="pergunta">
-                <h3>Convênio</h3>
-                <p>Sou convêniado pelo Dona Balbina Clinicas</p>
->>>>>>> 1f4d0cf925732e8653abad64f76b3dbe21d64b6d
             </div>
         </section>
     </main>
