--- a/src/pages/sobre_Mim.html
+++ b/src/pages/sobre_Mim.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
 
     <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
-    <title>Página de Aires Ramon dos Reis/Contato</title>
+    <title>Página de Aires Ramon dos Reis/Sobremim</title>
 </head>
 
 
@@ -25,31 +25,22 @@
         </div>
     </header>
     
-    <main class="principal">
-        <section class="card-sec">
-            <h2>Meios de Contato</h2>
-            <div class="card-container">
-                <div class="card">
-                    <h3 class="card-titulo">Whatsapp</h3>
-                    <div class="card-texto">
-                        <a href="https://wa.me/5519998518780" target="_blank">(19) 99851-8780</a>
-                    </div>
-                </div>
+    <main>
+        <section class="introducao">
+            <div class="image-placeholder">
 
-                <div class="card">
-                    <h3 class="card-titulo">Instagram</h3>
-                    <div class="card-texto">
-                        <a href="https://www.instagram.com/psi_airesreis/" target="_blank">@psi_airesreis</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <h3 class="card-titulo">E-mail</h3>
-                    <div class="card-texto">
-                        <a href="mailto:psico.airesreis@gmail.com" target="_blank">psico.airesreis@gmail.com</a>
-                    </div>
-                </div>
             </div>
+            <aside class="introducao-container">
+                <div class="introducao-titulos">
+                    <h1>Aires Ramon dos Reis</h1>
+                    <h2>Psicologo Clinico</h2>
+                </div>
+                <div class="introducao-texto">
+                    <p>Aires Ramon dos Reis, psicólogo formado pelo Centro Universitário Central Paulista (UNICEP) em 2018. Possuo especialização em Psicologia Infantil pela Faculdade Futura (2020) e, atualmente, curso pós-graduação em Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico pela Faculdade Alcance (FAAL), com conclusão prevista para fevereiro de 2026.</p>
+                    <p>Comprometo-me com a excelência no atendimento clínico, fundamentando minhas intervenções em evidências científicas e na escuta qualificada das demandas individuais de cada cliente. Busco continuamente aprimoramento profissional por meio de formações complementares, participação em congressos e atualização constante na literatura especializada.</p>
+                    <p>Meu propósito é promover o desenvolvimento psicológico e o bem-estar de crianças, adolescentes e adultos, por meio de intervenções éticas, respeitosas e eficazes, centradas nas necessidades cognitivas, emocionais e comportamentais de cada indivíduo.</p>
+                </div>
+            </aside>
         </section>
 
         <section class="card-sec" id="faq">
