mudança dos botões

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -61,7 +61,7 @@
                         fazer isso sozinho. Buscar ajuda é simplesmente o início de um movimento consciente em direção a
                         si mesmo. É o maior ato de coragem que existe.</p>
                 </div>
-                <button>Agendar Consulta</button>
+                <a class="button" href="https://wa.me/5519998518780">Agendar Consulta</a>
             </aside>
         </section>
 
@@ -75,7 +75,7 @@
                             qualquer outra
                             modalidade remota.</p>
                     </div>
-                    <button>Agendar Consulta</button>
+                    <a class="button" href="https://wa.me/5519998518780">Agendar Consulta</a>
                 </div>
             </div>
         </section>
