--- a/src/pages/meu_Trabalho.html
+++ b/src/pages/meu_Trabalho.html
@@ -41,7 +41,7 @@
                     
                     <p>Com os dados obtidos através dos métodos, elaboro uma hipótese diagnóstica e faço a utilização de um plano de intervenção individualizado. Na etapa de planejamento do tratamento, levo em conta os objetivos do cliente, contexto na qual ele está inserido e as abordagens teóricas que norteiam meu trabalho. Esse plano de intervenção será periodicamente ajustado conforme a evolução do paciente e das futuras sessões.</p>
                 </div>
-                <button>Agendar Consulta</button>
+                <a class="button" href="https://wa.me/5519998518780">Agendar Consulta</a>
             </aside>
         </section>
 
@@ -52,7 +52,7 @@
                     <h3 class="card-titulo">Agendamento</h3>
                     <div class="card-texto">
                         <p>Agendamentos somente através de Whatsapp e Instagram</p>
-                        <p>Página de Contato</p>
+                        <a href="contato.html">Acesse a página de contato</a>
                     </div>
                 </div>
 
