Homologando alterações para manter o status de atualiazação de meu código local - Pietro

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
 
     <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon"> 
-    <title>Página de Aires Ramon dos Reis/Contato</title>
+    <title>Aires Ramon dos Reis</title>
 </head>
 
 
