--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
 
     <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon">
-    <title>PsicoAires</title>
+    <title>Aires Ramon dos Reis</title>
 </head>
 
 
@@ -32,7 +32,7 @@
             </div>
             <aside class="main-text">
                 <h1>Aires Ramon dos Reis</h1>
-                <h2>Psicologo Clinico</h2>
+                <h2>Psicólogo Clínico</h2>
                 <p> Sou o Dr. Aires Ramon dos Reis, psicólogo especializado em Psicologia Infantil, Neuropsicologia e
                     Avaliação Psicológica e Psicodiagnóstico, e aqui você dá seu primeiro passo para cuidar de sua saúde
                     mental. </p>
