Correções gramaticais necessárias nas páginas index.html, meu)Trabalho.html e sobre_mim.html - Pietro

--- a/src/pages/meu_Trabalho.html
+++ b/src/pages/meu_Trabalho.html
@@ -33,11 +33,11 @@
             <aside class="introducao-container">
                 <div class="introducao-titulos">
                     <h1>Aires Ramon dos Reis</h1>
-                    <h2>Psicologo Clinico</h2>
+                    <h2>Psicólogo Clínico</h2>
                     <h3>Minha forma de trabalho</h3>
                 </div>
                 <div class="introducao-texto">
-                    <p>Antes da consulta, iremos começar com uma entrevista para poder compreender o motivo da pessoa estar me procurando, histórico pessoal e familiar, principais sintomas notados ou dificuldades relatadas. Após a entrevista, consigo determinar o método mais adequado para avaliar o caso, podendo incluir testes psicológicos validados, escalas, observação comportamental, e caso necessário, entrevistas complementares com familiares ou responsáveis.</p>
+                    <p>Antes da consulta, começaremos com uma entrevista para poder compreender o motivo da pessoa estar me procurando, histórico pessoal e familiar, principais sintomas notados ou dificuldades relatadas. Após a entrevista, consigo determinar o método mais adequado para avaliar o caso, podendo incluir testes psicológicos validados, escalas, observação comportamental, e caso necessário, entrevistas complementares com familiares ou responsáveis.</p>
                     
                     <p>Com os dados obtidos através dos métodos, elaboro uma hipótese diagnóstica e faço a utilização de um plano de intervenção individualizado. Na etapa de planejamento do tratamento, levo em conta os objetivos do cliente, contexto na qual ele está inserido e as abordagens teóricas que norteiam meu trabalho. Esse plano de intervenção será periodicamente ajustado conforme a evolução do paciente e das futuras sessões.</p>
                 </div>
