--- a/src/pages/sobre_Mim.html
+++ b/src/pages/sobre_Mim.html
@@ -33,7 +33,7 @@
             <aside class="introducao-container">
                 <div class="introducao-titulos">
                     <h1>Aires Ramon dos Reis</h1>
-                    <h2>Psicologo Clinico</h2>
+                    <h2>Psicólogo Clínico</h2>
                 </div>
                 <div class="introducao-texto">
                     <p>Aires Ramon dos Reis, psicólogo formado pelo Centro Universitário Central Paulista (UNICEP) em 2018. Possuo especialização em Psicologia Infantil pela Faculdade Futura (2020) e, atualmente, curso pós-graduação em Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico pela Faculdade Alcance (FAAL), com conclusão prevista para fevereiro de 2026.</p>
